- Drag&Drop a connection where source or target system is an Abyss system, should switch connection type to "abyss" - fixed js bug in "route finder" module - fixed UI z-Index glitch where systems "overlap" context menu

--- a/sass/layout/_map.scss
+++ b/sass/layout/_map.scss
@@ -308,7 +308,7 @@ $mapWrapperMaxWidth:     $mapWidth + 35px;
       @include transform( translate3d(0, -1px, 0) !important);
 
       &:not(.jsPlumb_dragged){
-        z-index: 2040 !important; // should overlap connection endpoint overlays,not for dragged elements -> prevent "show/hide flickering" of overlays
+        z-index: 1040 !important; // should overlap connection endpoint overlays,not for dragged elements -> prevent "show/hide flickering" of overlays
       }
     }
 
@@ -741,7 +741,7 @@ $mapWrapperMaxWidth:     $mapWidth + 35px;
 // context menu =======================================================================================================
 .dropdown-menu{
   font-family: $font-family-bold;
-  z-index: 1020; // over tooltips
+  z-index: 1050; // over tooltips
   will-change: opacity, top, left, transform;
 
   a{
